--- a/assets/css/adminSideBar.css
+++ b/assets/css/adminSideBar.css
@@ -1,7 +1,6 @@
 :root {
     --header-height: 2rem;
     --nav-width: 65px;
-    --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
     --z-fixed: 100
 }
@@ -43,6 +42,17 @@ a {
     transition: .5s
 }
 
+.l-navbar .welcome{
+    margin: 0 auto;
+    text-align: center;
+}
+.l-navbar i{
+    padding-right: 7px;
+}
+hr{
+    align-items: center;
+    margin-left: 1rem;
+}
 .header_toggle {
     color: white;
     font-size: 1.25rem;
@@ -62,11 +72,11 @@ span.brand{
     justify-content: center;
     overflow: hidden;
 }
-
+/* 
 .header_img img {
     width: 30px;
     padding-left:10px;
-}
+} */
 
 header .email{
     font-size:0.8rem;
@@ -126,19 +136,18 @@ header .email{
 }
 
 .nav_link:hover, a:hover {
-    color:white;
-    background: maroon;
-    border-radius: 20px;
-    margin-left: 5px;
+    color:rgb(202, 0, 0);
+    font-weight: 900;
 }
 
 .nav_icon {
     font-size: 1rem
 }
 .nav .logout{
-    margin-top: 10rem;
+    text-align: right;
+    margin-top: 5rem;
 }
-.show {
+.side {
     left: 0
 }
 
@@ -147,16 +156,23 @@ header .email{
 }
 
 .active {
-    color: white;
-    background-color: maroon;
-    border-radius: 20px;
-    margin-left: 5px;
+    color: maroon;
+    font-weight: 900;
+}
+
+.active::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 5px;
+    height: 32px;
+    background-color: brown;
+    font-weight: 900;
 }
 
 .height-100 {
     height: 100vh;
 }
-
 
 @media screen and (min-width: 768px) {
     body {
@@ -169,7 +185,7 @@ header .email{
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
     }
 
-    .header_img {
+    /* .header_img {
         width: 35px;
         height: 35px;
   
@@ -178,7 +194,7 @@ header .email{
     .header_img img {
         width: 35px;
        
-    }
+    } */
 
     .l-navbar {
         left: 0;
@@ -186,14 +202,13 @@ header .email{
 
     }
 
-    .show {
-        width: calc(var(--nav-width) + 156px)
+    .side {
+        width: calc(var(--nav-width) + 156px);
     }
 
     .body-pd {
         padding-left: calc(var(--nav-width) + 188px)
     }
-   
 }
 
 @media screen and (max-width: 768px){
@@ -203,11 +218,14 @@ header .email{
     span.brand{
         display: none;
     }
+    .welcome{
+        display: none;
+    }
 }
 @media screen and (max-width: 576px){
     
     .header_toggle {
-        left:1rem;
+        left:1.5rem;
         font-size: 1rem;
     }
      header .email{
