--- a/assets/css/adminSideBar.css
+++ b/assets/css/adminSideBar.css
@@ -72,11 +72,6 @@ span.brand{
     justify-content: center;
     overflow: hidden;
 }
-/* 
-.header_img img {
-    width: 30px;
-    padding-left:10px;
-} */
 
 header .email{
     font-size:0.8rem;
@@ -91,8 +86,11 @@ header .email{
     height: 100vh;
     background-color:white;
     padding: .5rem 1rem 0 0;
+    z-index: var(--z-fixed);
     transition: .5s;
-    z-index: var(--z-fixed)
+    -moz-transition:.5s ;
+    -o-transition: .5s;
+    -webkit-transition: .5s;
 }
 
 .nav {
@@ -145,7 +143,7 @@ header .email{
 }
 .nav .logout{
     text-align: right;
-    margin-top: 4vh;
+   align-items: flex-end;
 }
 .side {
     left: 0
@@ -185,17 +183,6 @@ header .email{
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
     }
 
-    /* .header_img {
-        width: 35px;
-        height: 35px;
-  
-    }
-
-    .header_img img {
-        width: 35px;
-       
-    } */
-
     .l-navbar {
         left: 0;
         padding: 1rem 1rem 0 0;
@@ -216,9 +203,6 @@ header .email{
         padding: 15px;
     }
     span.brand{
-        display: none;
-    }
-    .welcome{
         display: none;
     }
 }
