--- a/assets/css/applicant.css
+++ b/assets/css/applicant.css
@@ -1,5 +1,6 @@
 body{
     background: #f4f4f4;
+    height: min-content;
 }
 
 .bg-default{
@@ -26,14 +27,49 @@ body{
 
 .information{
     background:#93D9F6;
-    width: 70%;
     font-size: 0.75rem;
     padding: 15px;
+    width:80%;
 }
 .information i.fa{
     font-size: 2.2rem;
 }
 
+.information p{
+    padding-bottom:0;
+    padding-left: 3rem;
+    margin-bottom: 0.3rem;
+}
+
+/* breadcrumbs */
+
+
+
+/* personal info */
+.personalInfoWrapper{
+    background: white;
+    border-radius: 25px;
+}
+
+.personalInfoTitle{
+    background: maroon;
+    border-radius: 25px 25px 0 0;
+}
+
+.personalInfoTitle p, .personalInfoContents{
+    padding:10px 30px;
+
+}
+
+.personalInfoContents{
+    border-radius: 0 0 25px 25px;
+}
+
+/* 
+div.contents{
+    height: min-content;
+    overflow-y: auto;
+} */
 /* this is needed to make the content scrollable on larger screens */
 @media (min-width: 576px) {
     .h-sm-100 {
