Optimize change password, announcement, applicant registration.

--- a/assets/css/changePassword.css
+++ b/assets/css/changePassword.css
@@ -4,7 +4,7 @@ body{
 }
 
 .ChangePasswordTab h3{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 800
 }
 
@@ -15,28 +15,25 @@ body{
     border-radius: 20px 20px 0 0 ;
 }*/
 
+.passContents{
+    background: white;
+    border-radius: 25px;
+}
 
 .table-wrapper{
     border: 0.1px solid rgb(221, 220, 220);
-    border-radius: 25px 25px 0 0 ;
+    border-radius: 25px;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
+    background: white;
     
 }
 
 .Changepassword-header{
     background-color: #800000;
     color: white;
-    font-size: 0.9rem;
-    padding: 15px 1.3rem;
     border-radius: 25px 25px 0 0 ;
-    
-}
-
-.form-group{
-    margin-right: 20px;
-    margin-left: 50px;
-
+    padding-top: 2px;
 }
 
 #save:hover{
@@ -71,4 +68,3 @@ body{
     margin-bottom: 20px;
     margin-top: 5px;
 }
-
