--- a/assets/css/announcement.css
+++ b/assets/css/announcement.css
@@ -172,18 +172,20 @@ input[type=text], input[type=date],input[type=time], textarea{
     color: white;
     background-color:maroon;
     font-size: 0.55rem;
-    padding: 3px 5px;
+    padding: 2.8px 5px;
     opacity: 0.93;
-    margin-top: 2.5px;
+    margin-top: 2.4px;
 }
 #table-body tbody .action-buttons li #status{ 
     color: white;
     background-color:maroon;
     font-size: 0.53rem;
     opacity: 0.93;
-    padding: 4.2px 7px;
+    padding: 3.1px 7px;
     border-radius: 3px;
     cursor: pointer;
+    width: 58.5px;
+    margin-left: 1px;
 }
 #table-body tbody .action-buttons li button:hover, #table-body tbody .action-buttons li #status:hover{
     opacity: 1;
