--- a/assets/css/applicant.css
+++ b/assets/css/applicant.css
@@ -62,6 +62,10 @@ body{
     border-radius: 25px;
     border: 0.1px solid rgb(221, 220, 220);
     margin-bottom: 2rem;
+     transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -webkit-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
 }
 
 .tabTitle{
@@ -122,7 +126,6 @@ label{
     font-weight: 500;
     font-size: 0.9rem;
 }
-
 #final_step .Wrapper .Contents button.download{
     font-size: 0.9rem;
     background: #F2BD53;
@@ -142,6 +145,7 @@ label{
 #final_step .Wrapper .Contents .finishedButton:hover{
     opacity: 1;
 }
+
 /* this is needed to make the content scrollable on larger screens */
 @media (min-width: 576px) {
     .h-sm-100 {
