--- a/assets/css/faculty.css
+++ b/assets/css/faculty.css
@@ -1,9 +1,133 @@
+body{
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.9rem;
+}
+
+/* Accordion */
+
+.accordion-item{
+    border-radius: 30px;
+}
+.accordion-button{
+    background-color: #302323;
+    color: white;
+    font-size: 0.9rem;
+    padding: 15px 1.3rem;
+}
+.accordion-item:first-of-type .accordion-button{
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+.accordion-item:last-of-type {
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+.accordion-item:last-of-type .accordion-button.collapsed {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background: maroon;
+}
+.accordion-item:last-of-type {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+.accordion-button::after{
+    filter: brightness(0%) invert(100%);
+}
+.accordion-button:not(.collapsed){
+    background-color: #800000;
+    color:white;
+}
+.accordion-button:not(.collapsed)::after{
+    filter: brightness(0%) invert(100%);
+}
+.accordion-button:focus{
+    box-shadow: none;
+}
+
+/* Save and Cancel Button */
+
+#save{
+    background-color: #800000;
+    border-color: transparent;
+    color: white;
+    text-decoration: none;
+    margin-right: 8px;
+    font-size: 0.8rem;
+}
+#cancel{
+    background-color: #aaaaaa;
+    border-color: transparent;
+    color: black;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+#save:hover{
+    background-color: white;
+    border-color: #800000;
+    color: #800000;
+    font-size: 0.8rem;
+}
+#cancel:hover{
+    background-color: white;
+    border-color: #800000;
+    color: #800000;
+    font-size: 0.8rem;
+}
+ button:focus{
+    box-shadow: none;
+}
+
+/* Form Responsiveness */
+
+.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-size: 0.8rem;
+}
+
+.form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    font-size: 0.8rem;
+}
+
+.form-control::-ms-input-placeholder { /* Microsoft Edge */
+    font-size: 0.8rem;
+}
+
+input[type=text], input[type=date],input[type=time], textarea{
+    color: black;
+    font-size: 0.8rem;
+}
+
+/* Table Responsiveness */
+
+.table-wrapper{
+    background: white;
+    border-radius: 25px;
+    border: 0.1px solid rgb(221, 220, 220);
+}
+.table-title{
+    background-color: #800000;
+    color: white;
+    text-align: center;
+    border-radius: 25px 25px 0 0 ;
+}
+.table-title h2{
+    font-size: inherit;
+    margin: 15px;
+}
+#table-body thead{
+    text-align: center;
+}
+#table-body tbody{
+    text-align: center;
+
+}
 #table-body tr{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-
 #table-body td{
  max-width: 200px;
  overflow: hidden;
@@ -11,6 +135,35 @@
  white-space: nowrap;
 }
 
+/* Action Button */
+
+#table-body tbody .action-buttons li{
+    list-style-type: none;
+    display: inline-block;
+}
+#table-body tbody .action-buttons li button{
+    color: white;
+    background-color:maroon;
+    font-size: 0.55rem;
+    padding: 3px 5px;
+    opacity: 0.93;
+    margin-top: 2.5px;
+}
+#table-body tbody .action-buttons li #status{ 
+    color: white;
+    background-color:maroon;
+    font-size: 0.53rem;
+    opacity: 0.93;
+    padding: 4.2px 7px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+#table-body tbody .action-buttons li button:hover, #table-body tbody .action-buttons li #status:hover{
+    opacity: 1;
+}
+#table-body tbody .action-buttons li button:focus{
+    box-shadow: none;
+}
 
 /* Title Page and Back Button */
 
@@ -36,12 +189,6 @@
     font-weight: 800;
 }
 
-.viewProfessorTitle h3{
-    font-size: 1.5rem;
-    font-weight: 800;
-    display: inline;
-}
-
 /* Add Faculty */
 
 .form-label{
@@ -59,6 +206,13 @@
 .form-control:focus{
     box-shadow: none;
     border-color: #800000;
+}
+
+/* Modal */
+
+.modal-header{
+    background-color: #800000;
+    color: white;
 }
 
 /* Filter and Search */
@@ -95,11 +249,17 @@ textarea:focus, input:focus{
 
 /* Professor View Page */
 
-#professorAvatar .btn{
+.viewProfessorTitle h3{
+    font-size: 1.5rem;
+    font-weight: 800;
+    display: inline;
+}
+
+#viewProfessorAvatar .btn{
     padding: 3px 13px 3px 3px;
 }
 
-#professorAvatar i{
+#viewProfessorAvatar i{
     color: white;
     background-color: #800000;
     font-size: 50px;
@@ -108,8 +268,58 @@ textarea:focus, input:focus{
 }
 
 #viewProfessorInformation td{
+    color: black;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     padding: 15px 5px;
 }
+
+/* Professor View Page Table */
+
+button#viewProfessorInformationTab.nav-link.active::before,
+button#viewProfessorSubjectTab.nav-link.active::before,
+button#viewProfessorSectionTab.nav-link.active::before{
+    background: none;
+}
+
+div#ProfessorInformation.tab-pane.active.show::before,
+div#ProfessorSubject.tab-pane.active::before,
+div#ProfessorSection.tab-pane.active::before{
+    background: none;
+}
+
+#viewProfessorTabContent label{
+    color: rgb(95, 95, 95);
+    font-weight: 200;
+}
+
+#ProfessorSubject #table-body td{
+    font-weight: 200;
+}
+
+#ProfessorSection #table-body td{
+    font-weight: 200;
+}
+
+ul#viewProfessorTab.nav{
+    background-color: #800000;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    color: #800000;
+    background-color: white;
+    border-color: white;
+    font-weight: 200;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link{
+    color: white;
+}
+
+div#viewProfessorTabContent.tab-content{
+    background: white;
+}
+
