--- a/assets/css/announcement.css
+++ b/assets/css/announcement.css
@@ -140,6 +140,7 @@ input[type=text], input[type=date],input[type=time], textarea{
     background: white;
     border-radius: 25px;
     border: 0.1px solid rgb(221, 220, 220);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .table-title{
     background-color: #800000;
