--- a/assets/css/mainLogin.css
+++ b/assets/css/mainLogin.css
@@ -5,7 +5,7 @@ body, html {
     background:  #f4f4f4;
     height: 100%;
 }
-
+ 
 * {
     box-sizing: border-box;
 }
@@ -95,6 +95,9 @@ h3{
     letter-spacing: 1px;
     color: black;
     padding-bottom: 2rem;
+}
+h3.applicant{
+    font-size: 1.7rem;
 }
 .errormsg{
     color: red;
