Adjust Changes Course Tab

--- a/assets/css/course.css
+++ b/assets/css/course.css
@@ -137,7 +137,7 @@ textarea:focus, input:focus{
 
 /* Filter and Search */
 
-#filterAndSearch{
+#filter{
     text-align: right;
 }
 select:invalid{
