--- a/assets/css/class.css
+++ b/assets/css/class.css
@@ -5,26 +5,9 @@ body{
 
 /* Title Page */
 
-.FacultyTab h3{
+.ClassTab h3{
     font-size: 1.5rem;
     font-weight: 800;
-}
-
-/* Back Button */
-
-#back-button{
-    background-color: #800000;
-    color: white;
-    border-color: transparent;
-    margin: 0px 10px 10px 0px; /*align button and title*/
-}
-#back-button:hover{
-    background-color: white;
-    border-color: #800000;
-    color: #800000;
-}
-.btn:focus{
-    box-shadow: none;
 }
 
 /* Accordion */
@@ -69,6 +52,36 @@ body{
     box-shadow: none;
 }
 
+/* Form Responsiveness */
+
+.form-label{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.form-control{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.form-control:focus{
+    box-shadow: none;
+    border-color: #800000;
+}
+.form-control::placeholder{ /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-size: 0.8rem;
+}
+.form-control:-ms-input-placeholder{ /* Internet Explorer 10-11 */
+    font-size: 0.8rem;
+}
+.form-control::-ms-input-placeholder{ /* Microsoft Edge */
+    font-size: 0.8rem;
+}
+input[type=text], input[type=date], input[type=time], textarea{
+    color: black;
+    font-size: 0.8rem;
+}
+
 /* Save and Cancel Button */
 
 #save{
@@ -98,35 +111,34 @@ body{
     color: #800000;
     font-size: 0.8rem;
 }
-
-/* Form Responsiveness */
-
-.form-label{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.form-control{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.form-control:focus{
+.btn:focus{
     box-shadow: none;
-    border-color: #800000;
 }
-.form-control::placeholder{ /* Chrome, Firefox, Opera, Safari 10.1+ */
-    font-size: 0.8rem;
+
+/* Filter and Search */
+
+#filterAndSearch{
+    text-align: right;
 }
-.form-control:-ms-input-placeholder{ /* Internet Explorer 10-11 */
-    font-size: 0.8rem;
+select:invalid{
+    color: gray;
 }
-.form-control::-ms-input-placeholder{ /* Microsoft Edge */
-    font-size: 0.8rem;
-}
-input[type=text], input[type=date], input[type=time], textarea{
+option{
     color: black;
-    font-size: 0.8rem;
+}
+select:active{
+    box-shadow: none;
+}
+textarea:focus, input:focus{
+    outline: none;
+}
+#search{
+    color: white;
+    background-color: #800000;
+    padding: .1rem .5rem;
+}
+#search i{
+    font-size: 10px;
 }
 
 /* Table Responsiveness */
@@ -202,108 +214,15 @@ input[type=text], input[type=date], input[type=time], textarea{
     color: white;
 }
 
-/* Filter and Search */
+/* Add Class */
 
-#filterAndSearch{
-    text-align: right;
-}
-select:invalid{
+select.form-control{
     color: gray;
-}
-option{
-    color: black;
-}
-select:active{
-    box-shadow: none;
-}
-textarea:focus, input:focus{
-    outline: none;
-}
-#search{
-    color: white;
-    background-color: #800000;
-    padding: .1rem .5rem;
-}
-#search i{
-    font-size: 10px;
+    font-size: small;
 }
 
-/* Professor View Page Title */
+/* View Class */
 
-.viewProfessorTitle h3{
-    font-size: 1.5rem;
-    font-weight: 800;
-    display: inline;
-}
-
-/* Professor View Page Avatar */
-
-#viewProfessorAvatar .btn{
-    padding: 3px 13px 3px 3px;
-}
-#viewProfessorAvatar i{
-    color: white;
-    background-color: #800000;
-    font-size: 50px;
-    padding: 15px 18px;
-    border-radius: 50%;
-}
-
-/* Professor View Page Details */
-
-#viewProfessorInformation td{
-    color: black;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    padding: 15px 5px;
-}
-
-/* Professor View Page Tab-Header */
-
-ul#viewProfessorTab.nav{
-    background-color: #800000;
-    border-bottom: none;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link{
-    color: white;
-}
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
-    color: #800000;
-    background-color: white;
-    border-color: white;
-    font-weight: 200;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-button#viewProfessorInformationTab.nav-link.active::before,
-button#viewProfessorSubjectTab.nav-link.active::before,
-button#viewProfessorSectionTab.nav-link.active::before{
-    background: none;
-}
-div#ProfessorInformation.tab-pane.active.show::before,
-div#ProfessorSubject.tab-pane.active::before,
-div#ProfessorSection.tab-pane.active::before{
-    background: none;
-}
-
-/* Professor View Page Tab-Content */
-
-div#viewProfessorTabContent.tab-content{
-    background: white;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-}
-#viewProfessorTabContent label{
-    color: rgb(95, 95, 95);
-    font-weight: 200;
-}
-#ProfessorSubject #table-body td,
-#ProfessorSection #table-body td{
-    font-weight: 200;
-}
 .form-control:disabled, .form-control[readonly] {
     background-color: white;
     opacity: 1;
