--- a/assets/css/changePassword.css
+++ b/assets/css/changePassword.css
@@ -37,7 +37,9 @@ body{
     padding-top: 2px;
 }
 
-
+.Changepassword-header p{
+    font-size: 1rem;
+}
 .form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     font-size: 0.8rem;
 }
