--- a/assets/css/adminDashboard.css
+++ b/assets/css/adminDashboard.css
@@ -12,11 +12,39 @@ body{
 }
 
 .billboardTitle{
-    background:maroon;
+  background:maroon;
     border-radius: 25px 25px 0 0 ;
 }
 
 /* calendar css */
+.calendar{
+  background:rgb(143, 0, 0);
+  height: 200px;
+  border-radius: 25px;
+  border: 0.1px solid rgb(221, 220, 220);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  margin: 0 10px;
+  color: whitesmoke;
+}
+#search{
+  color: white;
+  background-color: #800000;
+  padding: .1rem .5rem;
+}
+#search i{
+  font-size: 10px;
+}
+
+.calendar .month h1{
+text-align: center;
+margin: auto 0;
+letter-spacing: 2px;
+text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.741);
+}
+.calendar .day{
+  letter-spacing: 2px;
+  text-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.741);
+}
 
 /* View information tab */
 
@@ -35,7 +63,7 @@ body{
   border-radius: 25px;
 }
 ul#viewInfoTab.nav{
-  background-color: #800000;
+  background-color:maroon;
   border-bottom: none;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
