Added admission tab.

--- a/assets/css/mainLogin.css
+++ b/assets/css/mainLogin.css
@@ -87,6 +87,7 @@ body, html {
 .input-group-addon {
     position: absolute;
     padding: 8px 12px;
+    font-size: 0.8rem;
 }
 h3{
     font-family: 'Roboto', sans-serif;
